# vengine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml  test.yml
src/: input.rs  io.rs  main.rs  stats.rs  util.rs
src/engine/: camera.rs  mod.rs  palette.rs
src/engine/core/: engine.rs  mod.rs  window.rs
src/engine/core/window/: application.rs  event.rs  events.rs  handler.rs  mod.rs  window.rs
src/engine/geometry/: plane.rs
src/engine/object/: chunk.rs  mod.rs  quad.rs
src/engine/physics/: simulation.rs
src/engine/pipelines/voxels/: mod.rs  vertex.rs
src/engine/pipelines/voxels/shaders/: base.wgsl
src/engine/renderer/: backend.rs  camera.rs  mod.rs  pass.rs  renderer.rs  size.rs  texture.rs
src/engine/renderer/frame/: mod.rs  pass.rs  ui_pass.rs  voxel_pass.rs
src/engine/renderer/pipeline/voxels/: mod.rs
src/engine/renderer/pipeline/voxels/shaders/: base.wgsl
src/engine/renderer/ui/: mod.rs
src/engine/renderer/voxel/: mod.rs
src/engine/rendering/: backend.rs  configuration.rs  frame.rs  mod.rs  pipeline.rs
src/engine/rendering/frame/: mod.rs  pass.rs  ui_pass.rs  voxel_pass.rs
src/engine/rendering/pipeline/: mod.rs
src/engine/rendering/pipeline/ui/: mod.rs
src/engine/rendering/pipeline/voxel/: mod.rs
src/engine/ui/: egui.rs  mod.rs  pass.rs  performance.rs  renderer.rs
src/engine/ui/rendering/: pass.rs
src/engine/util/: ptr.rs
src/engine/voxel/: chunk.rs  chunk_mesh.rs  mod.rs  object.rs  quad.rs  terrain.rs
src/engine/voxel/chunk/: axis.rs  direction.rs  mod.rs
src/engine/voxel/rendering/: pass.rs  pipeline.rs
src/game/: input.rs  mod.rs  scene.rs
src/game/ui/: mod.rs
src/game/ui/level/: custom.rs  mod.rs  physics.rs  procedural.rs
src/game/ui/menu/: credits.rs  custom.rs  main.rs  mod.rs  pause.rs  seed.rs
