[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["compile-time-rng"] }
bytemuck = { version = "1.21.0", features = ["derive", "extern_crate_alloc"] }
cgmath = "0.18.0"
colorgrad = "0.7.0"
crossbeam = "0.8.4"
egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
env_logger = "0.11.6"
log = "0.4.25"
nalgebra = "0.33.2"
noise = "0.9.0"
pollster = "0.4.0"
rand = "0.9.0"
rapier3d = { version = "0.23.0", features = ["parallel", "simd-stable"] }
wgpu = "24.0.1"
winit = "0.30.8"
mimalloc = "0.1.43"
tracy-client = { version = "0.18.0", optional = true }

[features]
profiling = ["tracy-client"]

[profile.dev]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
opt-level = 3
