[package]
name = "vengine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["compile-time-rng"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
crossbeam = "0.8.4"
egui = "0.31.0"
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
nalgebra = "0.33.2"
wgpu = "24.0.1"
winit = "0.30.9"
